--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "mudasir",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.2.4"
   }
 }
