--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0"
   }
 }
